# ed_core

./: CMakeLists.txt  README.md  package.xml
config/: amigo.yaml
examples/plugins/hello_world/: hello_world_plugin.cpp  hello_world_plugin.h
include/ed/: entity.h  logging.h  plugin_container.h  server.h  time.h  types.h  update_request.h  world_model.h
include/ed/io/: writer.h
include/ed/logging/: error_context.h
include/ed/models/: model_loader.h
include/ed/plugin/: plugin.h
include/ed/serialization/: serialization.h
include/ed/time/: rate.h  time.h  time_cache.h
include/ed/world_model/: entity.h  relation.h  transform_cache.h  transform_crawler.h  update_request.h  world_model.h
msg/: EntityUpdateInfo.msg
plugins/: world_update_client_plugin.cpp  world_update_client_plugin.h  world_update_server_plugin.cpp  world_update_server_plugin.h
src/: ed.cpp  entity.cpp  logging.cpp  plugin_container.cpp  server.cpp  world_model.cpp
src/logging/: error_context.cpp  logging.cpp
src/models/: model_loader.cpp  shape_loader.cpp
src/serialization/: serialization.cpp
src/world_model/: entity.cpp  transform_cache.cpp  transform_crawler.cpp  update_request.cpp  world_model.cpp
srv/: GetWorldModel.srv
